                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.2.5


  *) [TS-1903] Remove JEMALLOC_P use, it seems to have been deprecated.

  *) [TS-1902] Remove iconv as dependency.

  *) [TS-1900] Detect and link libhwloc on Ubuntu.

  *) [TS-1470] Fix cache sizes > 16TB (part 2 - Don't reset the cache after restart)
   Author: Jan Van Doorn <Jan_VanDoorn@cable.comcast.com>

Changes with Apache Traffic Server 3.2.4

  *) [TS-1657] Traffic Cop doesn't wait() for its children

  *) [TS-1656] to make read from writer work

  *) [TS-1658] RAW disk support for FreeBSD

  *) [TS-1651] raw disk cache disabled when system start

  *) [TS-1652] Mutex leak plugged.

  *) [TS-1585] plugins need memory barriers for ARM

  *) [TS-1575] Ranges broken, "fix" by dsiabling
 
  *) [TS-1536] SNI support breaks IP-based lookup

  *) [TS-1523] High CPU on *BSD

  *) [TS-1522] improve RT on Cluster purge missing objects
   Author: Bin Chen

  *) [TS-1484] SSL-crashed every now and then with 3.2.0 + SNI-fixes

  *) [TS-1514] Fix collation in custom logging.
   Author: bettydramit

  *) [TS-1498] Fix header_filter plugin for ARM.

  *) [TS-1497] stats codes mess up when disk fail

  *) [TS-1436] Added Yahoo directory layout

  *) [TS-1474] disable ssl compression by default

  *) [TS-1472] Fix RAM cache stats for CLFUS.

  *) [TS-1430] Remove TS_ARG_MAX usage so that platforms with
  unlimited ARG_MAX can build correctly.

  *) [TS-1471] Fix SNI certificate fallback path

  *) [TS-1470] Fix cache sizes > 16TB
   Author: Jan Van Doorn <Jan_VanDoorn@cable.comcast.com>

Changes with Apache Traffic Server 3.2.1

  *) [TS-1358] Don't link libreadline with all binaries and plugins.

  *) [TS-1374] Cert path not working using intermdiate certificate

  *) [TS-1373] Silence spurious error when adding SSL certificates with alternate names

  *) [TS-1338] SSL not handling some events properly
