@@ -47,14 +47,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   Patch: 5566ac76d6c4e4f5154421f1ac1077487b02d332
   +1: igalic, zwoop [I double checked with John too], jpeach
 
-  Fix gcc-4.8 build problems
-  Jira: https://issues.apache.org/jira/browse/TS-1785
-  Patch: dccdd5a44, 2bee0a2f0, dccdd5a44, b4d4f4a9a,
-         deb8253a, 44fff1b91
-  (Patches do not apply cleanly, there is a merge conflict resolving patch in
-  https://issues.apache.org/jira/secure/attachment/12572264/TS-1714.diff)
-  +1: zwoop, arno, jpeach
-
   Fix SSL accept performance regression
   Jira: https://issues.apache.org/jira/browse/TS-1538
   Patch: ccc4b37b91f25c2e985f195b77369ce20e2e8e81
