@@ -658,10 +658,7 @@ LogAccess::marshal_record(char *record, char *buf)
 #define LOG_FLOAT   RECD_FLOAT
 #define LOG_STRING  RECD_STRING
 
-  typedef RecInt LogInt;
-  typedef RecCounter LogCounter;
   typedef RecFloat LogFloat;
-  typedef RecString LogString;
 
   RecDataT stype = RECD_NULL;
   bool found = false;
@@ -676,7 +673,7 @@ LogAccess::marshal_record(char *record, char *buf)
       // conversion below, if this ever changes we should modify
       // accordingly
       //
-      ink_debug_assert(sizeof(int64_t) >= sizeof(LogInt) && sizeof(int64_t) >= sizeof(LogCounter));
+      ink_debug_assert(sizeof(int64_t) >= sizeof(RecInt) && sizeof(int64_t) >= sizeof(RecCounter));
 
       // so that a 64 bit integer will fit (including sign and eos)
       //
