@@ -2,6 +2,8 @@
 Changes with Apache Traffic Server 3.2.5
 
 
+  *) [TS-1785] Fixes to make it build with gcc-4.8.x.
+
   *) [TS-1903] Remove JEMALLOC_P use, it seems to have been deprecated.
 
   *) [TS-1902] Remove iconv as dependency.
